components/faq/FaqComponent.module.css
.faq-component {
  box-shadow: 0 26px 30px rgba(129, 129, 140, 0.06),
    0 1px 12px rgba(129, 129, 140, 0.1), 0 36px 30px hsla(0, 0%, 94.1%, 0.6);
  border-radius: 12px;
  cursor: pointer;
  padding: 28px 40px;
}

.faq-text {
  align-items: center;
  color: #1f1f30;
  font-size: 16px;
  font-weight: 600;

  cursor: pointer;
}

